--- a/Project5-Android/app/src/main/AndroidManifest.xml
+++ b/Project5-Android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SecondActivity"
+
+                  android:parentActivityName=".MainActivity"
+                  android:label="@string/secondActivity_name">
+        </activity>
+        <activity android:name=".MainActivity"
+                  android:label="@string/mainActivity_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
